--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -1,4 +1,4 @@
-%% 
+ %% 
 %% Copyright 2007, 2008, 2009 Elsevier Ltd
 %% 
 %% This file is part of the 'Elsarticle Bundle'.
@@ -500,7 +500,7 @@ Each sentence was presented as an utterance by a speaker, and participants were 
 \b. The \textsc{noun}s together were \textsc{adjective}. \label{bnc-together}
 
 Given our interest in rates of collective interpretations, we are primarily concerned with collective paraphrase endorsement rates; we expect distributive paraphrase endorsement rates to give redundant information.  We included both distributive and collective paraphrases to highlight the potential ambiguity for participants.
-Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what the speaker intended by his or her utterance. Before rating its paraphrases, participants judged whether the utterance made sense (choosing between "Yes" and "No"). We analyzed data from the 85 participants who indicated that their native language was English.
+Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what the speaker intended by his or her utterance. Before rating its paraphrases, participants judged whether the utterance made sense (choosing between ``Yes" and ``No"). We analyzed data from the 85 participants who indicated that their native language was English.
 
 %\subsubsection{Predictions}
 %
@@ -525,12 +525,12 @@ There are 8 predicates that occur with multiple nouns in our small corpus; we pl
 %
 %
 For at least 3 out of these 8 predicates, rates of collective endorsement differ significantly by subject noun (\emph{bright}, \emph{closed}, \emph{small}; see \ref{2-stats} for details). We draw the reader's attention to the case of stubbornly distributive \emph{small} (bottom right of Fig.~\ref{noun-pred-coll}). 
-If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics, we should find no effect of the subject noun in the determination of \emph{smalls}'s distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. But this is not the case for \emph{small} in Fig.~\ref{noun-pred-coll}. 
+If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics, we should find no effect of the subject noun in the determination of \emph{small}'s distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. But this is not the case for \emph{small} in Fig.~\ref{noun-pred-coll}. 
 %More importantly, the subject \emph{numbers} stands out in its relatively high rates of collective endorsement with the predicate \emph{small}. 
 A linear mixed effects model predicting collective endorsement rates by subject noun for \emph{small}, with random by-participant intercepts, finds that sentences with the subject \emph{numbers} received greater rates of collective endorsement than sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).\footnote{We find the same pattern of results if instead we compare each subject noun with the grand mean (i.e., through effect, or deviation, coding of our variables): \emph{numbers} deviates significantly, while the other nouns do not.} Curiously, \emph{numbers} names objects that do not instantiate physically, which plausibly increases the predictability of their collective size (i.e., their summation) and thus increases rates of collective interpretations.
 %\ndg{we should have some analysis of the other seven predicates -- maybe there is an overall test of whether noun matters? or do tests within predicates (add significance stars to the figure...).}\gcs{would it be better to only plot \emph{small} in fig.~\ref{noun-pred-coll}?} 
 
-This analysis relies on the chance occurrence of multiple subject nouns in our small corpora to test the effects of local linguistic context. In Expt.~2b, we follow up on this result by systematically testing the effect of subject nouns on a narrower set of predicates.
+This analysis relies on the chance occurrence of multiple subject nouns in our small corpus to test the effects of local linguistic context. In Expt.~2b, we follow up on this result by systematically testing the effect of subject nouns on a narrower set of predicates.
 
 \begin{figure}[h!]
 	\centering
@@ -543,7 +543,7 @@ This analysis relies on the chance occurrence of multiple subject nouns in our s
 \subsection{Experiment 2b: \emph{big}, \emph{heavy}, \emph{tall}}
 
 We then narrowed our sights to the predicates tested in Expt.~1: \emph{big}, \emph{heavy}, and \emph{tall}. These predicates are of particular interest because they come from both supposed lexical categories (stubbornly distributive and complaisantly collective) and the physical properties they name lend themselves to direct manipulation.
-Due to the limited number of instances of plural predication with these predicates in the British National Corpus, we use instead the much larger Google Books Corpus \citep{davies2011} to look at their most frequent subject nouns.
+Due to the limited number of instances of plural predication with these predicates in the British National Corpus, we use instead the much larger Google Books Corpus (\citeauthor{davies2011}, 2011) to look at their most frequent subject nouns.
 
 \subsubsection{Participants}
 
@@ -648,7 +648,7 @@ According to our hypothesis, greater predictability should lead to more collecti
 For instance, if collections of certain boxes are always stacked neatly, the collective height of a stack can be stably predicted (as the sum of individual heights); if these boxes come in jumbled-up piles the collective height is less predictable.
 In Expt.~3 we manipulate expectations about the arrangement of boxes, using the paraphrase methodology to test the effect on the interpretation of plural predications. We expect to see an effect on \emph{tall}, whose collective property is the direct target of our manipulation; we also expect to see a more moderate effect on \emph{big} to the extent that big can refer to height; we expect no effect on \emph{heavy}, which is stable regardless of arrangement.
 
-In Expt.~3 we also return to the effect of speaker's knowledge. Recall the prediction of our pragmatic hypothesis, that more collective interpretations should attain when the speaker lacks knowledge about individual object properties (but has knowledge about collective properties). We conjectured that the effect of \emph{heavy}'s subject nouns in Expt.~2 was due to knowledge in this way: for smaller objects the likelihood of interacting with them individually is lower, making the likelihood of individual weight knowledge lower.
+In Expt.~3 we also return to the effect of speaker's knowledge. Recall the prediction of our pragmatic hypothesis, that more collective interpretations should attain when the speaker lacks knowledge about individual object properties (but has knowledge about collective properties). We conjectured that the effect of \emph{heavy}'s subject nouns in Expt.~2 was due to knowledge in this way: for smaller objects the likelihood of interacting with them individually is higher, making the likelihood of individual weight knowledge higher.
 In Expt.~1 we attempted to manipulate the likelihood that the speaker had interacted with the boxes individually, via the ``inspect'' scenario, versus only collectively, in the ``move'' scenario. We found a trend in the predicted direction that did not reach significance.
 It is possible that this effect was real, but small because of a bias for the distributive referent (leading to a floor effect).
 In Expt.~3, we repeat the move/inspect manipulation using the pure paraphrase endorsement dependent measure of Expt.~2, which may have greater sensitivity than a binary choice between possible referents.
@@ -727,7 +727,7 @@ As is apparent in Fig.~\ref{resultsexpt2}, there was a main effect of \textsc{co
 
 As we would expect if contextual predictability of collective properties influences the viability of collective interpretations, regular contexts had higher ratings for collective paraphrases (and lower ratings for distributive ones). The predicate \textit{tall} was most affected by our contextual manipulation, which directly targeted the height dimension, stacking boxes on top of each other. But \emph{big}, claimed to be stubbornly distributive, is similarly affected: regular contexts yield more collective interpretations. 
 
-For the predicate \emph{heavy}, our contextual predictability manipulation had no measurable effect, presumably because collective weight is already maximally predictable. However, \emph{heavy} was sensitive to the ``move'' vs.~``inspect'' scenario manipulation: as was the trend in the results of Expt.~1, ``move'' scenarios yielded much greater collective endorsement ratings for \emph{heavy}. This manipulation privileges collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation; Cubert lacked access to individual box weights in ``move'' scenarios. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation, owing to the fact that they name properties that are visually assessable, and thus visually accessible.
+For the predicate \emph{heavy}, our contextual predictability manipulation had no measurable effect, presumably because collective weight is already maximally predictable. However, \emph{heavy} was sensitive to the ``move'' vs.~``inspect'' scenario manipulation: as was the trend in the results of Expt.~1, ``move'' scenarios yielded much greater collective endorsement ratings for \emph{heavy}. This manipulation privileges collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation; Cubert lacked access to individual box weights in ``move'' scenarios. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation, owing to the fact that they name properties that are visually accessible, and thus visually assessable.
 
 An alternative interpretation of the contextual predictability effect is that in regular, stacked contexts, participants reanalyzed the plural definite description \emph{the boxes} as referring to a single individual (e.g., to a single pile, and not to a set of boxes); if \emph{the boxes} referred to a single individual, there never was any collective predication.
 Such a representational coercion story raises serious problems for the semantics of plural definite descriptions \citep[for discussion, see ][]{link1983,landman1989,schwarzschild1996,link1998}. More importantly it is inconsistent with the \emph{lack} of effect for \emph{heavy}: if the pile of boxes was simply represented as an individual when stacked, we would expect greater collective interpretation rates for all predicates in regular contexts.
@@ -759,7 +759,7 @@ Taken together, our results demonstrate the central role of context in plural pr
 %%
 %then have a briefer section on the setup we use for the boxes scenario, and how we choose parameters.}
 
-We aim to formalize the pragmatic account described so far, especially the role contextual predictability and speaker knowledge in ambiguity resolution.
+We aim to formalize the pragmatic account described so far, especially the role of contextual predictability and speaker knowledge in ambiguity resolution.
 We will base our analysis on the Rational Speech-Acts (RSA) approach \citep{frankgoodman2012,goodmanstuhlmuller2013}. Within the RSA framework, language understanding is modeled as a social reasoning process: the listener interprets an utterance by reasoning about a cooperative speaker who is trying to inform a naive listener about some state of affairs. 
 
 %Using Bayesian inference, the listener determines what the state of the world is likely to be given that a speaker produced some utterance, knowing that the speaker is reasoning about how a listener is most likely to interpret that utterance. Thus, we have at least three levels of inference. At the top, the sophisticated, pragmatic listener, \emph{L}$_{1}$, reasons about the pragmatic speaker, \emph{S}$_{1}$, and infers the state of the world \emph{s} given that the speaker chose to produce the utterance \emph{u}. The speaker chooses \emph{u} by maximizing the probability that a naive, literal listener, \emph{L}$_{0}$, would correctly infer the state of the world \emph{s} given the literal meaning of \emph{u}.
@@ -776,7 +776,7 @@ In the formal exposition that follows, we will be brief about the pre-existing m
 
 \subsection{The model}
 
-We take states of the world, $s\in S$, to consist of a collection of entities, each of which has some individual degree: for each $x\in s$, $d(s)\in \mathbb R$ is the relevant property.
+We take states of the world, $s\in S$, to consist of a collection of entities, each of which has some individual degree: for each $x\in s$, $d(x)\in \mathbb R$ is the relevant property.
 We assume a simple truth-functional literal semantics, wherein a plural predication utterance $u$ (e.g., \emph{the boxes are big})  denotes a mapping from states of the world to truth values.\footnote{We assume truth values are coerced to numbers where appropriate: \emph{true} is $1$ and \emph{false} is $0$.} We parameterize the truth function, $\sem{u}^{v,c,\theta_c,\theta_d}: S \rightarrow \text{Bool}$, so that it depends on context, $c$, on utterance interpretation, $v$, and on two gradable thresholds, $\theta_c$ and $\theta_d$. 
 We will consider three alternative utterances: 
 an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}).
@@ -791,7 +791,7 @@ if $v$ \sem{\texttt{distrib}}$^{\theta_d}$, else \sem{\texttt{coll}}$^{c,\theta_
 
 The unambiguous distributive utterance, \Last[a], is a universal quantification over a vague scalar meaning: each object's degree must exceed the distributive threshold $\theta_d$. 
 The unambiguous collective utterance, \Last[b], is again a vague scalar meaning: the collective degree must exceed the collective threshold $\theta_c$. 
-However, the collective degree captures two assumptions. First, we follow the work on collective semantics in assuming that the appropriate aggregation is based on a sum \citep[e.g.][]{scha1984}: the total degree of the collection.
+However, the collective degree captures two assumptions. First, we follow the work on collective semantics in assuming that the appropriate aggregation is based on a sum \citep[e.g.,][]{scha1984}: the total degree of the collection.
 Second, we assume that the computation of this total degree may depend on contextual factors $c$ (such as the particular arrangement of the objects); we treat $c$ as a simple additive variable that can distort the total degree of the state---an approximation of the many ways that context could affect the collective property. 
 Finally, the ambiguous utterance, \Last[c], is governed by the variable $v$: depending on $v$ it is either collective or distributive.
 
@@ -1095,7 +1095,7 @@ In section \ref{model}, we formalized our hypotheses with a computational model 
 
 Recall that current theories of stubborn distributivity describe it as a constraint on the sort of subjects certain predicates may compose with. 
 %Specifically, stubbornly distributive predicates refuse pluralities from their basic denotations. 
-Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretations. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. However, even unabashedly stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them; we claim it is the way that context supports collective interpretations that provides the key to understanding where stubborn distributivity comes from in the first place: contextual predictability.
+Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretations. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. Even unabashedly stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them; we claim it is the way that context supports collective interpretations that provides the key to understanding where stubborn distributivity comes from in the first place: contextual predictability.
 
 Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement, speaker perspective, etc. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{tall}, which name properties of physical extent. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates (or as a preference for plural arguments with fixed physical arrangements), but here we suggest a simpler explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
 
