--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -803,11 +803,15 @@ Fig.\ \ref{resultsexpt4} displays the collective paraphrase endorsement ratings 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=1.05\linewidth]{plots/expt4.eps} 
-	\vspace{-20pt}
-	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~3.}\label{resultsexpt4}
+	\vspace{-35pt}
+	\caption{Paraphrase endorsement rate averaged across all trials in Expt.~4.}\label{resultsexpt4}
 \end{figure}
 
-For each dimension, we fit a linear regression model predicting collective endorsement ratings by \textsc{context} (``random'' vs.~``regular'') and \textsc{trial} order; for those dimensions with both positive and negative adjectives, models additionally included the \textsc{valence} predictory and the interaction between \textsc{context} and \textsc{valence}.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial), given the strong negative correlation between the two endorsement ratings ($r=-XXX$).} The full regression models appear in \ref{expt4results}.
+For each dimension, we fit a linear regression model predicting collective endorsement ratings by \textsc{context} (``random'' vs.~``regular'') and \textsc{trial} order; for those dimensions with both positive and negative adjectives (i.e., height, size, and width), models additionally included the \textsc{valence} predictor and the interaction between \textsc{context} and \textsc{valence}.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial), given the strong negative correlation between the two endorsement ratings ($r=-0.49$).} The full regression models appear in \ref{resultsexpt4}.
+
+We begin with a look at the dimensions with only positive-valence instances. For \textbf{capacity} adjectives, the model found a marginally significant effect of context ($\beta$ = 0.16, $SE$ = 0.08, $t$ = 1.95, p $<$ 0.06), such that regular contexts tended to have more collective interpretations than did random contexts. There was no significant effect of context for \textbf{depth} ($\beta$ = 0.07, $SE$ = 0.09 $t$ = 0.85, p $<$ 0.40), \textbf{length} ($\beta$ = 0.01, $SE$ = 0.06, $t$ = 0.15, p $<$ 0.89), or \textbf{weight} ($\beta$ = -0.04, $SE$ = 0.07, $t$ = -0.51, p $<$ 0.62) adjectives.
+
+We turn next to those dimensions with both negative- and positive-valence instances. For \textbf{height} adjectives, the model found a main effect of valence ($\beta$ = 0.21, $SE$ = 0.08, $t$ = 2.77, p $<$ 0.01), such that 
 
 
 
